--- a/blazar_analysis.ipynb
+++ b/blazar_analysis.ipynb
@@ -490,6 +490,7 @@
     "\n",
     "    counts_per_bin = np.array(counts_per_bin)\n",
     "\n",
+    "    # TODO: use a better effective area, dont use center of angle**2 bin.\n",
     "    effective_areas = np.array(\n",
     "        [\n",
     "            aeff.evaluate(energy_true=E_mean * u.TeV, offset=np.sqrt(angle_sq) * u.deg)\n",
@@ -550,8 +551,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "6ea5ca57-23b5-4c47-b88c-6f79ce405edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5 TeV: 4.7268220311730644e-14, 1.5 TeV: 5.672186437407678e-15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For the vale of the theoretical bkg flux at different energies:\n",
+    "# D. Kerszberg, M. Kraus and e.a. Kolitzus D., The cosmic-ray electron spectrum measured with H.E.S.S., .\n",
+    "\n",
+    "# TODO: non penso che funzioni cosi\n",
+    "# Here i take the average between 0.5 and 1.0 TeV\n",
+    "bkg_th_en_low = 0.5 # [TeV]\n",
+    "bkg_th_en_high = 1.5 # [TeV]\n",
+    "# Here i take the value from the ref for the worst case: 0.5 TeV\n",
+    "bkg_flux_th_1TeV_low = 1.5e-3 # [m^-2 * s^-1 * sr^-1 * TeV^-1]\n",
+    "bkg_flux_th_1TeV_high = 2.0e-5 # [m^-2 * s^-1 * sr^-1 * TeV^-1]\n",
+    "\n",
+    "delta_angle_sq = ANGLE_BINS[1] - ANGLE_BINS[0]\n",
+    "omega_bin = delta_angle_sq * (u.deg**2).to(u.sr)\n",
+    "\n",
+    "bkg_sed_th_1TeV_low = bkg_flux_th_1TeV_low * (1e-2)**2 * bkg_th_en_low**2 * omega_bin\n",
+    "bkg_sed_th_1TeV_high = bkg_flux_th_1TeV_high * (1e-2)**2 * bkg_th_en_high**2 * omega_bin\n",
+    "\n",
+    "print(f\"0.5 TeV: {bkg_sed_th_1TeV_low}, 1.5 TeV: {bkg_sed_th_1TeV_high}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "32868360-4c8f-4415-a24d-1582aa12cb75",
+   "id": "cb6f71bb-d0b0-4304-80d1-78cc7db56df7",
    "metadata": {},
    "outputs": [],
    "source": []
